force-app/main/default/objects/Bank__c/fields/Customer_Care_mail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Customer Care mail</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>