force-app/main/default/objects/Bank__c/fields/Customer_care_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_care_Number__c</fullName>
    <label>Customer care Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>