force-app/main/default/objects/Bank__c/fields/Total_number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Accounts__c</fullName>
    <label>Total number of Accounts</label>
    <summaryForeignKey>Account__c.Bank__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>