force-app/main/default/objects/Bank__c/fields/Total_number_of_branches__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_branches__c</fullName>
    <label>Total number of branches</label>
    <summaryForeignKey>Branch__c.Bank__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>