force-app/main/default/objects/Bank__c/fields/Webpage_URL__c.field-meta.xml
<CustomField>
    <fullName>Webpage_URL__c</fullName>
    <label>Webpage URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>